--- a/ExampleCefTestUnitTestProject/ExampleCefTestUnitTestProject.csproj
+++ b/ExampleCefTestUnitTestProject/ExampleCefTestUnitTestProject.csproj
@@ -38,7 +38,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Xilium.CefGlue">
-      <HintPath>D:\Git\CefTest\Resources\Xilium.CefGlue.dll</HintPath>
+      <HintPath>..\Resources\Xilium.CefGlue.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Choose>
